myhome/src/objects/line_item__c.object
<CustomObject>
    <fields>
        <fullName>invoice__c</fullName>
        <label>invoice</label>
        <referenceTo>invoice__c</referenceTo>
        <relationshipLabel>line items</relationshipLabel>
        <relationshipName>line_items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>merchandise__c</fullName>
        <label>merchandise</label>
        <referenceTo>merchandise__c</referenceTo>
        <relationshipLabel>line items</relationshipLabel>
        <relationshipName>line_items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>total_units__c</fullName>
        <label>total units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unitprice__c</fullName>
        <label>unitprice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <formula>total_units__c  *  unitprice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>line item</label>
    <nameField>
        <label>line item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>line items</pluralLabel>
    <recordTypes>
        <fullName>cement_company</fullName>
        <active>true</active>
        <label>cement company</label>
    </recordTypes>
    <recordTypes>
        <fullName>garment_factory</fullName>
        <active>true</active>
        <label>garment factory</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>check_inventory</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNEW(),merchandise__r.Total_inventory__c &lt;  total_units__c ,IF(total_units__c &lt; PRIORVALUE(total_units__c),FALSE, merchandise__r.Total_inventory__c &lt; (total_units__c-PRIORVALUE(total_units__c))))</errorConditionFormula>
        <errorDisplayField>total_units__c</errorDisplayField>
        <errorMessage>Inventory is out of stock</errorMessage>
    </validationRules>
</CustomObject>